# req_Canva_2024.1

./: .tool-versions  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
analise/istar/: index.html
analise/verf_argumentacao/: index.html
analise/verf_backlog/: index.html
analise/verf_casos_de_uso/: index.html
analise/verf_cenario/: index.html
analise/verf_esp_suplementar/: index.html
analise/verf_lexico/: index.html
analise/verf_nfr-framework/: index.html
analise/verf_priorizacao/: index.html
analise/verf_rich_picture/: index.html
atas/reuniao01/: index.html
atas/reuniao02/: index.html
atas/reuniao03/: index.html
atas/reuniao04/: index.html
atas/reuniao05/: index.html
atas/reuniao06/: index.html
atas/reuniao07/: index.html
atas/reuniao08/: index.html
atas/reuniao09/: index.html
atas/reuniao1/: index.html
atas/reuniao10/: index.html
atas/reuniao11/: index.html
atas/reuniao12/: index.html
atas/reuniao13/: index.html
atas/reuniao14/: index.html
atas/reuniao15/: index.html
atas/reuniao2/: index.html
atas/reuniao3/: index.html
docs/: analise_protocolo.md  argumentacao.md  brainstorming.md  first_things.md  index.md  moscow.md  reuniao3.md  rich_picture.md
docs/analise/: istar.md  verf_argumentacao.md  verf_backlog.md  verf_casos_de_uso.md  verf_cenario.md  verf_esp_suplementar.md  verf_lexico.md  verf_nfr-framework.md  verf_priorizacao.md  verf_rich_picture.md
docs/atas/: reuniao02.md  reuniao03.md  reuniao06.md  reuniao07.md  reuniao08.md  (+12 more)
search/: search_index.json
site/: 404.html  index.html
(+110 files in other folders)
