[tool.poetry]
name = "req-canva-2024-1"
version = "0.1.0"
description = ""
authors = ["kyomi <me@kyomi.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
